clusters/telsha/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shikanime
---
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: capi-operator-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
