clusters/telsha/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telsha-webhook
  namespace: flux-system
spec:
  defaultBackend:
    service:
      name: webhook-receiver
      port:
        number: 80
  tls:
    - hosts:
        - telsha-webhook
